# upload-server

./: Cargo.toml  README.md
assets/: home.html  styles.css
src/: config.rs  error.rs  main.rs  sanitize_filename.rs  srv.rs
templates/: error.html  error_page.html
