[package]
name = "upload-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ascii = "1.0.0"

# for generating filenames based on date and time
chrono = "0.4.19"

# http library
tiny_http = "0.8.0"

# templates
askama = "0.10"

# static files
rust-embed = "5.8.0"

# not sure if needed
url = "2.2.1"
form_urlencoded = "1.0.1"
