[package]
name = "upload-server"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for generating filenames based on date and time
chrono = "0.4.19"

# http library
tiny_http = "0.6.3"
multipart = { version = "0.17.1", default_features = false, features = ["server", "tiny_http"] }

# static files
rust-embed = "5.8.0"

# not sure if needed
url = "1.7.2"
form_urlencoded = "1.0.1"
